syntax = "proto3";
package astro_canvas.x.interchain_account.v1;

option go_package = "github.com/chainapsis/cosmos-sdk-interchain-account/x/interchain-account/types";

message RegisterIBCAccountPacketData {
    string salt = 1;
}

message RunTxPacketData {
    bytes txBytes = 1;
}

message RegisterIBCAccountPacketAcknowledgement {
    bool   success = 1;
}

message RunTxPacketAcknowledgement {
    uint32 code = 1;
}